# c1_repo

./: dual_autodiff.ipynb  pyproject.toml  q5+q9.ipynb
dual_autodiff/: __init__.py  version.py
dual_autodiff/docs/: conf.py  index.rst  q5+q9.rst
dual_autodiff/docs/_build/doctrees/: dual_autodiff.doctree  environment.pickle  index.doctree  q5+q9.doctree  tutorial_instructions.doctree
dual_autodiff/docs/_build/html/: .buildinfo  dual_autodiff.html  genindex.html  index.html  objects.inv  q5+q9.html  search.html  searchindex.js  tutorial_instructions.html
dual_autodiff/docs/_build/html/_sources/: dual_autodiff.rst.txt  tutorial_instructions.rst.txt
dual_autodiff/dual_autodiff.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dual_autodiff/q/: q5+q9.rst  q5.py
dual_autodiff/tests/: test_dual.py
dual_autodiff_x/: MANIFEST.in  pyproject.toml  setup.py
dual_autodiff_x/src/dual_autodiff_x/: __init__.py  dual.c
dual_autodiff_x_new/: pyproject.toml  setup.py
dual_autodiff_x_new/c1_env/: pyvenv.cfg
dual_autodiff_x_new/dual_autodiff_x/: dual.c  dual.pyx  version.py
