[build-system]
requires = ["setuptools", "wheel", "setuptools_scm", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff"
dynamic = ["version"]
description = "A Python package that performs automatic differentiation using dual numbers."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    {name = "Lily Rausser", email = "lsr34@cam.ac.uk"}
]
keywords = ["Automatic Differentiation", "Dual Numbers", "Differentiation", "Mathemetical Transformations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology", 
    "License :: OSI Approved :: MIT License", 
    "Programming Language :: Python :: 3", 
    "Topic :: Software Development :: Libraries"
]

dependencies = [
  "pytest", 
]

[project.urls]
"Documentation" = "https://github.com/lrausser/dual_autodiff/docs"
"Source" = "https://github.com/yourusername/dual_autodiff"
"Issues" = "https://github.com/yourusername/dual_autodiff/issues"

[tool.setuptools.packages.find]
where = ["dual_autodiff"]
exclude = ["q"]

[tool.setuptools_scm]
write_to = "dual_autodiff/version.py"
fallback_version = "0.1.0"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"


[project.scripts] 
dual_autodiff = "dual_autodiff.cli:main"